# parallel

./: .gitignore  .travis.yml  404.html  LICENSE  Makefile  README.md  api.md  api.py  dev-requirements.txt  index.html  mkdocs.yml  my_test.py  pyproject.toml  readthedocs.yml  setup.py  sitemap.xml
docs/: conf.py  index.md  index.rst  live_docs.py  quickstart.md  todo
old-docs/: functional_table.html
old-docs/.doctrees/: environment.pickle  index.doctree
old-docs/user/: quickstart-multiple-functions.rst
old_tests/multiple_functions/: test_decorated_blocking_sequence.py  test_decorated_non_blocking_dict.py  test_decorated_non_blocking_sequence.py  test_non_decorated_blocking_dict.py  test_non_decorated_blocking_sequence.py  test_non_decorated_non_blocking_sequence.py
old_tests/same_function/: test_decorated_blocking_dict.py  test_decorated_blocking_sequence.py  test_decorated_non_blocking_sequence.py  test_non_decorated_blocking_dict.py  test_non_decorated_non_blocking_dict.py  test_non_decorated_non_blocking_sequence.py
parallel/: __init__.py  errors.py  exceptions.py  models.py  old.py  process.py  typed.py  utils.py
quickstart/: index.html
search/: search_index.json
tests/: base.py  test_internal_api.py  test_split.py  test_utils.py
tests/multiple_functions/: base.py  test_decorated_blocking_dict.py  test_non_decorated_non_blocking_dict.py
tests/same_function/: base.py  test_decorated_blocking_sequence.py  test_decorated_non_blocking_dict.py  test_non_decorated_blocking_sequence.py
tests/test_async_map/: test_async_map_dict_parameters.py  (+1 more)
(+25 files in other folders)
