[tool.poetry]
name = "python-parallel"
version = "0.9.0"
description = "Simple parallelism for the everyday developers"
authors = ["Santiago Basulto <santiago.basulto@gmail.com>"]
license = "MIT"
packages = [
    { include = "parallel" }
]
[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"
pytest-xdist = "^1.30.0"
livereload = "^2.6.1"
mypy = "^0.750"
mkdocs = "^1.0.4"
mkdocs-material = "^4.5.1"
pymdown-extensions = "^6.2"
ipython = "^7.10.1"
ipdb = "^0.12.3"
pytest-cov = "^2.8.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
